Добавлено визуальный ввод данных и выпадающий  список функций

--- a/ItUniver.TeleCalc.Web/ItUniver.TeleCalc.Web.csproj
+++ b/ItUniver.TeleCalc.Web/ItUniver.TeleCalc.Web.csproj
@@ -109,7 +109,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\BundleConfig.cs" />
@@ -120,6 +119,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\CalcModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -154,7 +154,10 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
     <Content Include="Views\Calc\Index.cshtml" />
-    <Content Include="Views\Calc\Operation.cshtml" />
+    <Content Include="Views\Calc\Operations.cshtml" />
+    <Content Include="Views\Shared\Operation.cshtml" />
+    <Content Include="Views\Shared\Ops.cshtml" />
+    <Content Include="Views\Calc\Exec.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ItUniver.TeleCalc.Core\ItUniver.TeleCalc.Core.csproj">
