--- a/ItUniver.TeleCalc.Web/ItUniver.TeleCalc.Web.csproj
+++ b/ItUniver.TeleCalc.Web/ItUniver.TeleCalc.Web.csproj
@@ -116,6 +116,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\CalcController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Extensions\ButtonExtension.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -131,6 +132,7 @@
     <Content Include="Content\Site.css" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="App_Code\Helpers.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -158,6 +160,8 @@
     <Content Include="Views\Shared\Operation.cshtml" />
     <Content Include="Views\Shared\Ops.cshtml" />
     <Content Include="Views\Calc\Exec.cshtml" />
+    <Content Include="Views\Shared\DisplayTemplates\Double.cshtml" />
+    <Content Include="Views\Shared\EditorTemplates\Double_e.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ItUniver.TeleCalc.Core\ItUniver.TeleCalc.Core.csproj">
