--- a/ItUniver.TeleCalc.Web/Views/Web.config
+++ b/ItUniver.TeleCalc.Web/Views/Web.config
@@ -18,6 +18,7 @@
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
         <add namespace="ItUniver.TeleCalc.Web" />
+        <add namespace="ItUniver.TeleCalc.Web.Extensions" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
