--- a/ItUniver.TeleCalc.Web/ItUniver.TeleCalc.Web.csproj
+++ b/ItUniver.TeleCalc.Web/ItUniver.TeleCalc.Web.csproj
@@ -162,7 +162,8 @@
     <Content Include="Views\Calc\Exec.cshtml" />
     <Content Include="Views\Shared\DisplayTemplates\Double.cshtml" />
     <Content Include="Views\Shared\EditorTemplates\Double_e.cshtml" />
-    <Content Include="Views\Shared\_Result.cshtml" />
+    <Content Include="Views\Calc\ExecResult.cshtml" />
+    <Content Include="Views\Shared\EditorTemplates\Collection.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ItUniver.TeleCalc.Core\ItUniver.TeleCalc.Core.csproj">
